--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
             <a href="{{ site.url }}/">Home</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/search">Search</a>
-            <a href="https://audiogon.xyz">Join our Discord Server!</a>
+            <a href="https://audiogonds.xyz">Join our Discord Server!</a>
           </nav>
         </header>
       </div>
