--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -100,11 +100,11 @@ layout: default
 
   </div>
   <div class="container">
-    {% include feedback.html %}
+    <!-- {% include feedback.html %}
   </div>
   <br>
   {% include disqus.html %}
   {% if site.sidebar %}
     {% include sidebar.html %}
-  {% endif %}
+  {% endif %} -->
 </article>
